--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,4 @@
 GLIDE_PROJECT_ID = "YOUR_GLIDE_PROJECT_ID"
 NEYNAR_API_KEY = "YOUR_NEYNAR_API_KEY"
 AIRSTACK_API_KEY = "YOUR_AIRSTACK_API_KEY"
-
-# [CONFIG API BASE URL]
-BASE_URL_NEYNAR_V2 = "https://api.neynar.com/v2/farcaster"
+LUM0X_API_KEY = "YOUR_LU0X_API_KEY"
